--- a/advent2020.cabal
+++ b/advent2020.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 967ce3d7b3f160f5b022f5e23ed5d38922e3e86a3f30f94cb5480b9b47ea3c2d
+-- hash: 7d7b826f92279a969e743751b401575fdf68bfeddc2c1ad8fa0044eddc75994e
 
 name:           advent2020
 version:        0.1.0.0
@@ -27,6 +27,7 @@ source-repository head
 
 library
   exposed-modules:
+      Advent.Input
       Advent2020.Day1
       Advent2020.Solve
   other-modules:
@@ -38,6 +39,7 @@ library
     , binary
     , bytestring
     , filepath
+    , parsec
     , tasty
     , tasty-golden
   default-language: Haskell2010
@@ -55,6 +57,7 @@ executable advent2020-exe
     , binary
     , bytestring
     , filepath
+    , parsec
     , tasty
     , tasty-golden
   default-language: Haskell2010
@@ -73,6 +76,7 @@ test-suite advent2020-test
     , binary
     , bytestring
     , filepath
+    , parsec
     , tasty
     , tasty-golden
   default-language: Haskell2010
