--- a/advent2020.cabal
+++ b/advent2020.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 2a9745a1d0d5715d6102509dfa2377f1e974c080a50e95ef601e7ec21ca5394c
+-- hash: 610f9c959363a620de6addb47f61d7fc16a3bdf2659da8c01a8573e0549be31e
 
 name:           advent2020
 version:        0.1.0.0
@@ -35,6 +35,7 @@ library
       Advent2020.Day03
       Advent2020.Day04
       Advent2020.Day05
+      Advent2020.Day06
       Advent2020.Solve
   other-modules:
       Paths_advent2020
