--- a/advent2020.cabal
+++ b/advent2020.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 58f2961cce589f8e4ae07666d1182180f910bed1380bfa96de491dc7d99f55dd
+-- hash: 2735672cad5b1a8bcca9e0322a42d6fbe2c1c632122c17a5b5009d990a776cee
 
 name:           advent2020
 version:        0.1.0.0
@@ -50,7 +50,8 @@ library
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      arithmoi
+    , base >=4.7 && <5
     , binary
     , bytestring
     , containers
@@ -70,6 +71,7 @@ executable advent2020-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       advent2020
+    , arithmoi
     , base >=4.7 && <5
     , binary
     , bytestring
@@ -91,6 +93,7 @@ test-suite advent2020-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       advent2020
+    , arithmoi
     , base >=4.7 && <5
     , binary
     , bytestring
