--- a/stack.yaml
+++ b/stack.yaml
@@ -40,7 +40,9 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
+extra-deps:
+- git: https://github.com/Bodigrim/arithmoi.git
+  commit: 5fffee910248ad1bdc9b27523da246c598c77980
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
