Complete day 24, part 1

--- a/advent2020.cabal
+++ b/advent2020.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 7b10fad3c41db0f58e016b12e02164322aed73530d17cbb899e07a06911a0efc
+-- hash: 41ba940a6a0639d8302e05c6d4e33d421027aa196d1445827a66bd970d50b913
 
 name:           advent2020
 version:        0.1.0.0
@@ -56,6 +56,7 @@ library
       Advent2020.Day21
       Advent2020.Day22
       Advent2020.Day23
+      Advent2020.Day24
       Advent2020.Solve
   other-modules:
       Paths_advent2020
